// Vitest Snapshot v1

exports[`plugins/output > should allow to custom server directory with distPath.server 1`] = `
{
  "module": {},
  "name": "Server",
  "output": {
    "chunkFilename": "server/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "server/[name].js",
    "hashFunction": "xxhash64",
    "libraryTarget": "commonjs2",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
}
`;

exports[`plugins/output > should allow to set distPath.js and distPath.css to empty string 1`] = `
{
  "module": {},
  "name": "Client",
  "output": {
    "chunkFilename": "async/[name].js",
    "cssChunkFilename": "async/[name].css",
    "cssFilename": "[name].css",
    "filename": "[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
}
`;

exports[`plugins/output > should allow to use copy plugin 1`] = `
{
  "builtins": {
    "copy": {
      "patterns": [
        {
          "from": "test",
        },
      ],
    },
  },
  "module": {},
  "name": "Client",
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
}
`;

exports[`plugins/output > should allow to use filename.js to modify filename 1`] = `
{
  "module": {},
  "name": "Client",
  "output": {
    "chunkFilename": "static/js/async/foo.js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/foo.js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
}
`;

exports[`plugins/output > should set output correctly 1`] = `
{
  "module": {},
  "name": "Client",
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
}
`;
